grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
spec:
  ports:
    - port: 3000
      targetPort: 3000
